fix: sout -> slf4j